// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MyData /> check how renders should render everything correctly for admin user 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:56.25em) {

}

<h3
    class="c0"
  >
    My data
  </h3>
  .c2 {
  display: grid;
  grid-gap: 2.4rem;
  grid-template-columns: repeat(3,1fr);
}

.c2 .change-passwd-btn {
  grid-area: 3 / 2 / 3 / 3;
}

.c2 .actions {
  grid-column: 1 / -1;
}

.c1 {
  background-color: #FAFAFA;
  padding: 2.4rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c7 > *:not(:last-child) {
  margin-bottom: 0.8rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c6 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c6:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c9 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c9:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

@media only screen and (max-width:37.5em) {
  .c2 {
    grid-template-columns: repeat(2,1fr);
  }

  .c2 .change-passwd-btn {
    grid-area: 4 / 1 / 4 / 3;
  }

  .c2 .actions > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media only screen and (max-width:56.25em) {
  .c1 {
    padding: 2.4rem 1.2rem;
  }
}

<div
    class="c0"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-testid="SingleInfo-Username"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Username
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            username
          </span>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Name"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Name
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            firstName lastName
          </span>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Name-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Email"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Email
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            email@domain.com
          </span>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Email-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Address"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Address
          </h4>
          <div
            class="c7"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              street
            </span>
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              zipCode city
            </span>
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              country
            </span>
          </div>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Address-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Contacts"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Contacts
          </h4>
          <div
            class="c7"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Email: visible
            </span>
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Phone number: visible
            </span>
          </div>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Contacts-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Phone number"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Phone number
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            phone
          </span>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Phone number-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c8 actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="c6"
            color="blue"
            type="button"
          >
            Change password
          </button>
          <button
            class="c9"
            color="red"
            type="button"
          >
            Delete account
          </button>
        </div>
        <div
          class="c8 actions"
          data-testid="MyData-admin-content"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="c6"
            color="blue"
            type="button"
          >
            Add admin
          </button>
          <button
            class="c9"
            color="red"
            type="button"
          >
            Remove admin
          </button>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`<MyData /> check how renders should render everything correctly for non admin user with status active 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:56.25em) {

}

<h3
    class="c0"
  >
    My data
  </h3>
  .c2 {
  display: grid;
  grid-gap: 2.4rem;
  grid-template-columns: repeat(3,1fr);
}

.c2 .change-passwd-btn {
  grid-area: 3 / 2 / 3 / 3;
}

.c2 .actions {
  grid-column: 1 / -1;
}

.c1 {
  background-color: #FAFAFA;
  padding: 2.4rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c7 > *:not(:last-child) {
  margin-bottom: 0.8rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c4 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c6 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c6:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c9 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c9:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c5 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

@media only screen and (max-width:37.5em) {
  .c2 {
    grid-template-columns: repeat(2,1fr);
  }

  .c2 .change-passwd-btn {
    grid-area: 4 / 1 / 4 / 3;
  }

  .c2 .actions > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media only screen and (max-width:56.25em) {
  .c1 {
    padding: 2.4rem 1.2rem;
  }
}

<div
    class="c0"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-testid="SingleInfo-Username"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Username
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            username
          </span>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Name"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Name
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            firstName lastName
          </span>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Name-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Email"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Email
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            email@domain.com
          </span>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Email-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Address"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Address
          </h4>
          <div
            class="c7"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              street
            </span>
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              zipCode city
            </span>
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              country
            </span>
          </div>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Address-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Contacts"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Contacts
          </h4>
          <div
            class="c7"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Email: visible
            </span>
            <span
              class="c5"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Phone number: visible
            </span>
          </div>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Contacts-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c3"
          data-testid="SingleInfo-Phone number"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c4"
          >
            Phone number
          </h4>
          <span
            class="c5"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            phone
          </span>
          <button
            class="c6"
            color="blue"
            data-testid="SingleInfo-Phone number-btn"
            type="button"
          >
            Change
          </button>
        </div>
        <div
          class="c8 actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="c6"
            color="blue"
            type="button"
          >
            Change password
          </button>
          <button
            class="c9"
            color="red"
            type="button"
          >
            Delete account
          </button>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`<MyData /> check how renders should render everything correctly for non admin user with status pending 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

@media only screen and (max-width:37.5em) {

}

@media only screen and (max-width:56.25em) {

}

<h3
    class="c0"
  >
    My data
  </h3>
  .c3 {
  display: grid;
  grid-gap: 2.4rem;
  grid-template-columns: repeat(3,1fr);
}

.c3 .change-passwd-btn {
  grid-area: 3 / 2 / 3 / 3;
}

.c3 .actions {
  grid-column: 1 / -1;
}

.c1 {
  background-color: #FAFAFA;
  padding: 2.4rem;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c4 > *:not(:last-child) {
  margin-bottom: 1.2rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c7 > *:not(:last-child) {
  margin-bottom: 0.8rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c5 {
  font-size: 1.7rem;
  line-height: 1;
  margin-top: 0;
  text-align: left;
}

.c9 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c9:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c10 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #F22613;
  color: #F22613;
}

.c10:hover {
  border-color: #F94D2A;
  color: #F94D2A;
}

.c2 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.4;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  word-break: break-all;
  font-size: 1.5rem;
}

@media only screen and (max-width:37.5em) {
  .c3 {
    grid-template-columns: repeat(2,1fr);
  }

  .c3 .change-passwd-btn {
    grid-area: 4 / 1 / 4 / 3;
  }

  .c3 .actions > * {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media only screen and (max-width:56.25em) {
  .c1 {
    padding: 2.4rem 1.2rem;
  }
}

<div
    class="c0"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <section
      class="c1"
      data-testid="MyData-pending-user-content"
    >
      <span
        class="c2"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        You need to activate your account to unlock all app functionalities. Verification link is active for 10 minutes. You can resend it below. If you do not activate your account within 1 hour, account will be deleted permanently.
      </span>
    </section>
    <section
      class="c1"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          data-testid="SingleInfo-Username"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c5"
          >
            Username
          </h4>
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            username
          </span>
        </div>
        <div
          class="c4"
          data-testid="SingleInfo-Name"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c5"
          >
            Name
          </h4>
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            firstName lastName
          </span>
        </div>
        <div
          class="c4"
          data-testid="SingleInfo-Email"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c5"
          >
            Email
          </h4>
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            email@domain.com
          </span>
        </div>
        <div
          class="c4"
          data-testid="SingleInfo-Address"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c5"
          >
            Address
          </h4>
          <div
            class="c7"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c6"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              street
            </span>
            <span
              class="c6"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              zipCode city
            </span>
            <span
              class="c6"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              country
            </span>
          </div>
        </div>
        <div
          class="c4"
          data-testid="SingleInfo-Contacts"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c5"
          >
            Contacts
          </h4>
          <div
            class="c7"
            direction="column"
            spacing="1"
            width="100%"
            wrap="nowrap"
          >
            <span
              class="c6"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Email: visible
            </span>
            <span
              class="c6"
              color=""
              display="inline-block"
              overflow="visible"
              size="3"
              spacing="0px"
              transform=""
            >
              Phone number: visible
            </span>
          </div>
        </div>
        <div
          class="c4"
          data-testid="SingleInfo-Phone number"
          direction="column"
          spacing="2"
          width="100%"
          wrap="nowrap"
        >
          <h4
            class="c5"
          >
            Phone number
          </h4>
          <span
            class="c6"
            color=""
            display="inline-block"
            overflow="visible"
            size="3"
            spacing="0px"
            transform=""
          >
            phone
          </span>
        </div>
        <div
          class="c8 actions"
          data-testid="MyData-pending-user-actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="c9"
            color="blue"
            type="button"
          >
            Send verification link
          </button>
          <button
            class="c9"
            color="blue"
            type="button"
          >
            Logout
          </button>
        </div>
        <div
          class="c8 actions"
          direction="row"
          spacing="3"
          width="100%"
          wrap="nowrap"
        >
          <button
            class="c10"
            color="red"
            type="button"
          >
            Delete account
          </button>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
